# polar-bites

./: .buildinfo  README.md  example.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx.yml  test.yml
_sources/: example.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/polar_bites/: index.rst.txt
_sources/autoapi/polar_bites/column/: index.rst.txt
_sources/autoapi/polar_bites/conversion/: index.rst.txt
_sources/autoapi/polar_bites/expression/: index.rst.txt
_sources/autoapi/polar_bites/manipulation/: index.rst.txt
_sources/autoapi/polar_bites/mat/: index.rst.txt
autoapi/: index.html
autoapi/polar_bites/: index.html
autoapi/polar_bites/column/: index.html
autoapi/polar_bites/conversion/: index.html
autoapi/polar_bites/expression/: index.html
autoapi/polar_bites/manipulation/: index.html
autoapi/polar_bites/mat/: index.html
docs/: api.rst  conf.py  example.rst  index.rst  install.rst  run_livereload.py
polar_bites/: __init__.py  column.py  conversion.py  expression.py  manipulation.py  mat.py
tests/: test_conversion.py  test_expression.py  test_manipulation.py  test_mat.py
